--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>Hello World!</title>
     <!-- data-main attribute tells require.js to load
          scripts/main.js after require.js loads. -->
-    <script data-main="app/main" src="app/require.js"></script>
+    <script data-main="app/HelloWorld" src="node_modules/requirejs/require.js"></script>
 </head>
 <body>
-<h1>Hello World!</h1>
 </body>
 </html>
